// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickOpenModal Basic render with mount & searchType = functions 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query="@"
  searchType="functions"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  symbols={
    Object {
      "functions": Array [],
      "variables": Array [],
    }
  }
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query="@"
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="sad-face"
                  >
                    <InlineSVG
                      className="sad-face "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="sad-face "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className="empty"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value="@"
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="small"
            >
              <ul
                aria-live="polite"
                className="result-list small"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal Basic render with mount & searchType = variables 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query="#"
  searchType="variables"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  symbols={
    Object {
      "functions": Array [],
      "variables": Array [],
    }
  }
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query="#"
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="sad-face"
                  >
                    <InlineSVG
                      className="sad-face "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="sad-face "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className="empty"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value="#"
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="small"
            >
              <ul
                aria-live="polite"
                className="result-list small"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal Basic render with mount 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=""
  searchType="sources"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=""
              selectedItemId=""
              showErrorEmoji={false}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="magnifying-glass"
                  >
                    <InlineSVG
                      className="magnifying-glass "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="magnifying-glass "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value=""
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="big"
            >
              <ul
                aria-live="polite"
                className="result-list big"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal Doesn't render when disabled 1`] = `""`;

exports[`QuickOpenModal Renders when enabled 1`] = `
<Slide
  handleClose={[Function]}
  in={true}
>
  <SearchInput
    count={0}
    expanded={false}
    handleClose={[Function]}
    hasPrefix={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Search sources…"
    query=""
    selectedItemId=""
    showErrorEmoji={false}
    size=""
    summaryMsg=""
  />
  <ResultList
    expanded={false}
    items={Array []}
    key="results"
    role="listbox"
    selectItem={[Function]}
    selected={0}
    size="big"
  />
</Slide>
`;

exports[`QuickOpenModal Simple goto search query = :abc & searchType = goto 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=":abc"
  searchType="goto"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  symbols={
    Object {
      "functions": Array [],
      "variables": Array [],
    }
  }
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=":abc"
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="sad-face"
                  >
                    <InlineSVG
                      className="sad-face "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="sad-face "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className="empty"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value=":abc"
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal showErrorEmoji false when count + query 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query="dasdasdas"
  searchType="sources"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={2}
              expanded={true}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query="dasdasdas"
              selectedItemId=""
              showErrorEmoji={false}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={true}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="magnifying-glass"
                  >
                    <InlineSVG
                      className="magnifying-glass "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="magnifying-glass "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value="dasdasdas"
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
            <ResultList
              expanded={true}
              items={
                Array [
                  Object {
                    "title": <div
                      dangerouslySetInnerHTML={
                            Object {
                                  "__html": undefined,
                                }
                      }
                />,
                  },
                  Object {
                    "title": <div
                      dangerouslySetInnerHTML={
                            Object {
                                  "__html": undefined,
                                }
                      }
                />,
                  },
                ]
              }
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="big"
            >
              <ul
                aria-live="polite"
                className="result-list big"
                id="result-list"
                role="listbox"
              >
                <li
                  aria-describedby="undefined-subtitle"
                  aria-labelledby="undefined-title"
                  className="result-item selected"
                  key="undefinedundefined0"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="title"
                    id="undefined-title"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": undefined,
                        }
                      }
                    />
                  </div>
                  <div
                    className="subtitle"
                    id="undefined-subtitle"
                  />
                </li>
                <li
                  aria-describedby="undefined-subtitle"
                  aria-labelledby="undefined-title"
                  className="result-item"
                  key="undefinedundefined1"
                  onClick={[Function]}
                  role="option"
                >
                  <div
                    className="title"
                    id="undefined-title"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": undefined,
                        }
                      }
                    />
                  </div>
                  <div
                    className="subtitle"
                    id="undefined-subtitle"
                  />
                </li>
              </ul>
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal showErrorEmoji false when goto numeric ':2222' 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=":2222"
  searchType="goto"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=":2222"
              selectedItemId=""
              showErrorEmoji={false}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="magnifying-glass"
                  >
                    <InlineSVG
                      className="magnifying-glass "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="magnifying-glass "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value=":2222"
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal showErrorEmoji false when no query 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=""
  searchType=""
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=""
              selectedItemId=""
              showErrorEmoji={false}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="magnifying-glass"
                  >
                    <InlineSVG
                      className="magnifying-glass "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="magnifying-glass "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value=""
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="small"
            >
              <ul
                aria-live="polite"
                className="result-list small"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal showErrorEmoji true when goto not numeric ':22k22' 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=":22k22"
  searchType="goto"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=":22k22"
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="sad-face"
                  >
                    <InlineSVG
                      className="sad-face "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="sad-face "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className="empty"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value=":22k22"
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal showErrorEmoji true when no count + query 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query="test"
  searchType=""
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query="test"
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="sad-face"
                  >
                    <InlineSVG
                      className="sad-face "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="sad-face "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className="empty"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value="test"
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal updateResults on enable 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={false}
  highlightLineRange={[Function]}
  query=""
  searchType="sources"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
/>
`;

exports[`QuickOpenModal updateResults on enable 2`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=""
  searchType="sources"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="exited"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal exited"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              hasPrefix={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=""
              selectedItemId=""
              showErrorEmoji={false}
              size=""
              summaryMsg=""
            >
              <div
                className="search-shadow"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="result-list"
                  className="search-field"
                  role="combobox"
                >
                  <Svg
                    name="magnifying-glass"
                  >
                    <InlineSVG
                      className="magnifying-glass "
                      element="i"
                      raw={false}
                      src="<svg></svg>"
                    >
                      <i
                        className="magnifying-glass "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg></svg>",
                          }
                        }
                        src={null}
                      />
                    </InlineSVG>
                  </Svg>
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="result-list"
                    className=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Search sources…"
                    spellCheck={false}
                    value=""
                  />
                  <CloseButton
                    buttonClass=""
                    handleClick={[Function]}
                  >
                    <button
                      className="close-btn"
                      onClick={[Function]}
                    >
                      <img
                        className="close"
                      />
                    </button>
                  </CloseButton>
                </div>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="big"
            >
              <ul
                aria-live="polite"
                className="result-list big"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;
